bugfixd: 1.修改缩放窗口，ui异常问题 new Features: 1.添加全局热键ctrl + space 唤起/隐藏 程序 2.更换主题，增大主功能区占比，启动默认置于顶层